# tswf

./: .editorconfig  .pre-commit-config.yaml  .pyproject.toml  README.md  environment.yaml  environment.yml  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  main.yaml
.test/config/: config.yaml
.test/data/raw/variants/: makedata.py
.test/data/raw/variants/ooa/: ooa_1_PASS.vcf.gz.gzi
.test/resources/: populations.tsv  ref_tsk_CHB_0.fa  ref_tsk_CHB_0.fa.fai  samples.tsv
config/: config.yaml
misc/: condalock.sh
resources/: populations.tsv  ref_tsk_CHB_0.fa  ref_tsk_CHB_0.fa.fai  samples.tsv
src/resources/: populations.tsv  ref_tsk_CHB_0.fa  ref_tsk_CHB_0.fa.fai  samples.tsv
src/tswf/: cli.py  config.py  decorators.py  env.py  wrappers.py
src/tswf/commands/: config.py  nf.py  quickstart.py  smk.py  viz.py
src/tswf/schemas/: config.schema.yaml  profile.schema.yaml
src/tswf/snakemake/: config.py  lmod.py  test.py  utils.py
src/tswf/tests/config/: config.bio2zarr.yaml  config.derive_aa.yaml  config.yaml  envmodules.yaml
src/tswf/tests/resources/: populations.tsv  ref_tsk_CHB_0.fa  ref_tsk_CHB_0.fa.fai  samples.tsv
src/tswf/tools/: get_ancestral_allele.py  make_ancestral_sequence.py  tsinfer.py  tsinfer_gnn.py  tsinfer_haplotype_gnn.py  tsinfer_make_samples.py
src/tswf/tools/viz/: tsinfer_eda.py
src/tswf/viz/: bokehutils.py
src/tswf/viz/data/: __init__.py  natural_earth.py  ne_50m_admin_0_countries.json
src/tswf/workflow/: Snakefile
src/tswf/workflow/envs/: bio2zarr.yaml
src/tswf/workflow/report/: meangnn.rst  workflow.rst
src/tswf/workflow/rules/: ancestral.smk  bio2zarr.smk  common.smk  relate.smk  tsinfer.smk
src/tswf/workflow/rules/core/: config.py
src/tswf/workflow/schemas/: config.schema.yaml  definitions.schema.yaml  envmodules.schema.yaml  populations.schema.yaml  samples.schema.yaml
src/tswf/workflow/scripts/: tsinfer-gnn.py  tsinfer-sample-gnn.py
src/workflow/: Snakefile
src/workflow/envs/: tsinfer.yaml
src/workflow/report/: gnn.rst
src/workflow/rules/: common.smk  relate.smk
src/workflow/schemas/: populations.schema.yaml  samples.schema.yaml
src/workflow/scripts/: bokehutils.py  common.py  get_ancestral_allele.py  make_ancestral_sequence.py  stats.py  tsinfer-haplotype-gnn.py  tsinfer.py
src/workflow/scripts/data/: natural_earth.py
tests/: conftest.py  test_cli.py  test_config.py  test_schema.py  test_smk_workflow.py
workflow/: Snakefile
workflow/envs/: plotting.yaml  seqio.yaml  tsinfer.yaml
workflow/report/: workflow.rst
workflow/rules/: ancestral.smk  common.smk  relate.smk  tsinfer.smk
workflow/rules/core/: config.py  config.smk
workflow/schemas/: config.schema.yaml  definitions.schema.yaml  samples.schema.yaml
workflow/scripts/: bokehutils.py  common.py  get_ancestral_allele.py  make_ancestral_sequence.py  plot-gnn.R  stats.py  tsinfer-eda.py  tsinfer-gnn-mean.py  tsinfer-gnn.py  tsinfer-haplotype-gnn.py  tsinfer-plot.py  tsinfer-sample-gnn.py  tsinfer.py
workflow/scripts/data/: __init__.py  natural_earth.py
